--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.5.0",
-    "@vue/compiler-sfc": "^3.2.4",
+    "@babel/core": "^7.15.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/vue3": "^6.3.7",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/compiler-sfc": "^3.2.6",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
-    "vite": "^2.5.1"
+    "vite": "^2.5.1",
+    "vue-loader": "^16.5.0"
   }
 }
