--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
+    "storybook-addon-pseudo-states": "^1.0.0",
     "vite": "^2.5.1",
     "vue-loader": "^16.5.0"
   }
