--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "latis-vue-components",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
+    "dev": "npm run storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -17,13 +15,10 @@
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
     "@storybook/vue3": "^6.3.7",
-    "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
-    "storybook-addon-pseudo-states": "^1.0.0",
-    "vite": "^2.5.1",
     "vue-loader": "^16.5.0"
   }
 }
