--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "rollup-plugin-vue": "^6.0.0",
     "vue-loader": "^16.5.0"
   },
+  "peerDependencies": {
+    "vue": "^3.2.6"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^3.0.0-4",
-    "vue": "^3.2.6"
+    "@fortawesome/vue-fontawesome": "^3.0.0-4"
   }
 }
