Remove unused deps

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gh-pages:build": "npm run build-storybook && touch dist-storybook/.nojekyll",
     "gh-pages:serve": "npx serve dist-storybook",
     "gh-pages:publish": "gh-pages --dotfiles --dist dist-storybook",
-    "gh-pages": "npm run gh-pages:build && npm run gh-pages:publish"
+    "gh-pages": "npm run gh-pages:build && npm run gh-pages:publish",
+    "yolo": "npm run release && npm run gh-pages"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -55,8 +56,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4"
   },
