--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@storybook/vue3": "^6.3.7",
     "@vue/compiler-sfc": "^3.2.6",
     "babel-loader": "^8.2.2",
+    "cypress": "^8.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.16.0",
     "gh-pages": "^3.2.3",
